lugx-k8s/frontend/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lugx-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lugx-frontend
  template:
    metadata:
      labels:
        app: lugx-frontend
    spec:
      containers:
        - name: lugx-frontend
          image: divyanjaliperera/lugx-frontend:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: lugx-frontend
spec:
  selector:
    app: lugx-frontend
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lugx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lugx-frontend
                port:
                  number: 80
