lugx-k8s/frontend/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lugx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lugx-frontend
                port:
                  number: 80
          - path: /games(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: game-service
                port:
                  number: 8000
          - path: /orders(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: order-service
                port:
                  number: 8000
          - path: /events(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: analytics-service
                port:
                  number: 8000
